It works with ALB

--- a/01-ecs-ec2-cluster/cloudformation/01-parent-stack.yml
+++ b/01-ecs-ec2-cluster/cloudformation/01-parent-stack.yml
@@ -8,7 +8,7 @@ Parameters:
     Type: String
 
 Conditions:
-  EnableALB: !Equals ["", "1"]
+  EnableALB: !Equals ["1", "1"]
 
 Resources:
   ECSClusterStack:
