--- a/01-ecs-ec2-cluster/cloudformation/05-nginx-ecs-svc.yml
+++ b/01-ecs-ec2-cluster/cloudformation/05-nginx-ecs-svc.yml
@@ -190,16 +190,16 @@ Resources:
           AssignPublicIp: DISABLED # DISABLED|ENABLED 
           SecurityGroups:
             - !Ref EFSClientSecurityGroupId
-            # - !Ref ALBForwardSecurityGroupId
+            - !Ref ALBForwardSecurityGroupId
           Subnets:
             - !Select [0, !FindInMap [RegionConfigMap,!Ref "AWS::Region", SubnetId]]
             - !Select [1, !FindInMap [RegionConfigMap,!Ref "AWS::Region", SubnetId]]
             - !Select [2, !FindInMap [RegionConfigMap,!Ref "AWS::Region", SubnetId]]
 
-      # LoadBalancers:
-      #   - ContainerName: nginx
-      #     ContainerPort: 80
-      #     TargetGroupArn: !Ref TargetGroupArn
+      LoadBalancers:
+        - ContainerName: nginx
+          ContainerPort: 80
+          TargetGroupArn: !Ref TargetGroupArn
 
       # VolumeConfigurations:
       #   - Name: efs-site-content
