--- a/01-ecs-ec2-cluster/nginx/Dockerfile
+++ b/01-ecs-ec2-cluster/nginx/Dockerfile
@@ -4,7 +4,12 @@ FROM nginx:${VERSION}
 
 # create ec2-user:ec2-user to match the UID and GID 
 # with Amazon Liunx and EFS AccessPoint permission config
-RUN groupadd --gid 1000 ec2-user
-RUN useradd --uid 1000 --gid 1000 ec2-user
+RUN groupadd --gid 1000 ec2-user;\
+    useradd --uid 1000 --gid 1000 ec2-user;\
+    mkdir -p /etc/nginx/templates;\
+    mkdir -p /usr/share/my-site/html
 
-#/etc/nginx/conf.d/mysite.conf
+#COPY my-site.conf /etc/nginx/conf.d/my-site.conf
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY *.template /etc/nginx/templates
+COPY my-site-html/ /usr/share/my-site/html
